# backend/controller/order.js
@@ -1,5 +1,4 @@
 const { Order, NOT_FOUND, CANNOT_CREATE} = require('../models/order.model');
-const { OrderItem } = require('../models/orderItem.model');
 
 /**
  * The callback to return the error or result of this function
@@ -32,36 +31,27 @@ const { OrderItem } = require('../models/orderItem.model');
  * @returns {null}
  */
 viewOrders = (req, res) => {
-  const accountId = req.query.accountId;
-  Order.getOrderByAccountId(accountId, (err, result) => {
-    if (err) {
-      return res.status(err.status).json({ message: err.message });
-    }
-    if (!result) {
-      return res.status(NOT_FOUND).json({ message: "Order Not Found" });
-    }
-    return res.status(200).json(result); 
-  });
-};
-
-/**
- * Getting all the menu items from a given account id.
- * @param {int}           accountId        The id of the account
- * @param {callback}      cb               Callback function
- * 
- * @returns {list of ordered menu itens including }
- */
-viewOrdersByOrderId = (req, res) => {
-  const orderId = req.params['orderId'] 
-  Order.getOrderByOrderId(orderId, (err, result) => {
-    if (err) {
-      return res.status(err.status).json({ message: err.message });
-    }
-    if (!result) {
-      return res.status(NOT_FOUND).json({ message: "Order Not Found" });
-    }
-    return res.status(200).json(result); 
-  });
+  if (req.query.accountId) {
+    Order.getOrderByAccountId(req.query.accountId, (err, result) => {
+      if (err) {
+        return res.status(err.status).json({ message: err.message });
+      }
+      if (!result) {
+        return res.status(NOT_FOUND).json({ message: "Order Not Found" });
+      }
+      return res.status(200).json(result); 
+    });
+  } else {
+    Order.getOrderByOrderId(req.query.orderId, (err, result) => {
+      if (err) {
+        return res.status(err.status).json({ message: err.message });
+      }
+      if (!result) {
+        return res.status(NOT_FOUND).json({ message: "Order Not Found" });
+      }
+      return res.status(200).json(result); 
+    });
+  }
 };
 
 /**
@@ -78,8 +68,8 @@ viewOrdersByOrderId = (req, res) => {
  * @returns {orderId: orderId}
  */
 createOrder = (req, res) => {
-    const { tableId } = req.body;
-    Order.createOrder(tableId, (err, result) => {
+    const { accountId, tableId, items } = req.body;
+    Order.createOrder(accountId, tableId, items, (err, result) => {
         if (err) {
             return res.status(err.status).json({ message: err.message });
         }
@@ -91,32 +81,4 @@ createOrder = (req, res) => {
 
 }
 
-/**
- * The callback to return the error or result of this function
- * @callback callback
- * @param {object}        error            The error if encountered, null otherwise
- * @param {object}        result           The result if successful, null otherwise
-*/
-/**
- * This addMenuItems function is for adding menu items to the order
- * This should typically be called when the customer finalise and submit their order
- * @param {int}           itemId          The id of the menu item
- * @param {int}           orderId         The id of the order
- * @param {int}           quantity        The menu item quantity
- * @param {int}           note            The note
- * 
- * @returns {null}
- */
-
-addMenuItems = (req, res) => {
-  const { itemId, orderId, quantity, note } = req.body
-  OrderItem.addMenuitemToTheOrder(itemId, orderId, quantity, note, (err, result) => {
-    if (err) {
-      return res.status(err.status).json({ message: err.message });
-    }
-    return res.status(200).json({}); 
-  });
-};
-
-
-module.exports = { viewOrders, viewOrdersByOrderId, createOrder, addMenuItems };
+module.exports = { viewOrders, createOrder };
